# rust-player

./: .gitignore  Cargo.toml  package_mac.sh  test_audio  test_egui
.github/workflows/: release.yml
crates/downloader/: Cargo.toml
crates/downloader/src/: main.rs
crates/player/: Cargo.toml  test_time.rs  test_video.rs
crates/player/docs/: architecture_streaming.md
crates/player/src/: bilibili_streamer.rs  http_streamer.rs  local_file_streamer.rs  main.rs  streamer.rs  torrent.rs  youtube_streamer.rs
