[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
dioxus = { version = "0.7.5", features = ["desktop"] }
dirs = "6.0"
futures-util = "0.3.32"
librqbit = "8.1.1"
tokio = { version = "1.52.1", features = ["full"] }


