[package]
name = "rust-player"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8"
dirs.workspace = true
librqbit.workspace = true
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
url = "2.5.8"
futures-util.workspace = true
ffmpeg-the-third = { version = "2.0", features = ["build"], optional = true }
rusty_ytdl = "0.7.4"
mime_guess = "2.0.5"

eframe = { version = "0.29", features = ["persistence", "glow"] }
egui-video = "0.9.0"

[features]
ffmpeg = ["ffmpeg-the-third"]
